--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ permalink: /contact/
 <div class="py2">
   {% if site.ajaxify_contact_form %}
     <form class="form-stacked">
-      <input type="text" name="email" class="field-light" placeholder="Email Addresse">
+      <input type="text" name="email" class="field-light" placeholder="Deine Email Addresse">
       <textarea type="text" name="content" class="field-light" rows="5" placeholder="Was würdest Du gerne sagen?"></textarea>
       <input type="hidden" name="_subject" value="New submission!" />
       <input type="text" name="_gotcha" style="display:none" />
@@ -15,12 +15,12 @@ permalink: /contact/
     </form>
   {% else %}
     <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked">
-      <input type="text" name="email" class="field-light" placeholder="Email Address">
-      <textarea type="text" name="content" class="field-light" rows="5" placeholder="What would you like to say?"></textarea>
+      <input type="text" name="email" class="field-light" placeholder="Deine Email Addresse">
+      <textarea type="text" name="content" class="field-light" rows="5" placeholder="Was würdest Du gerne sagen?"></textarea>
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
       <input type="hidden" name="_subject" value="New submission!" />
       <input type="text" name="_gotcha" style="display:none" />
-      <input type="submit" class="button button-blue button-big mobile-block" value="Say Hello">
+      <input type="submit" class="button button-blue button-big mobile-block" value="Absenden">
     </form>
   {% endif %}
 </div>
